# sodium

c++/: CMakeLists.txt  README.mkd
c++/sodium/: light_ptr.h  sodium.h  transaction.h
